chore: avoid mockito strictness LENIENT [TECH-1195]